fix colors menu overlap

--- a/src/components/QuranReader/SidebarNavigation/SidebarNavigation.module.scss
+++ b/src/components/QuranReader/SidebarNavigation/SidebarNavigation.module.scss
@@ -28,7 +28,7 @@
   padding-block-start: calc(1.5 * var(--spacing-mega));
   background-color: var(--color-background-elevated);
   overflow-x: hidden;
-  z-index: var(--z-index-default);
+  z-index: var(--z-index-sticky);
   box-sizing: border-box;
   border-inline-end: 1px solid var(--color-borders-hairline);
   width: var(--sidebar-size);
